--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@uiball/loaders": "^1.3.1",
     "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
